--- a/server.properties
+++ b/server.properties
@@ -1,9 +1,9 @@
 #Minecraft server properties
-#Tue Feb 09 19:25:59 MSK 2021
+#Tue Feb 09 19:45:47 MSK 2021
 generator-settings=
 op-permission-level=4
-allow-nether=true
 resource-pack-hash=
+allow-nether=true
 level-name=world
 enable-query=false
 allow-flight=false
@@ -12,25 +12,26 @@ server-port=25565
 max-world-size=29999984
 level-type=DEFAULT
 enable-rcon=false
-level-seed=
 force-gamemode=false
+level-seed=
 server-ip=localhost
 network-compression-threshold=256
 max-build-height=256
 spawn-npcs=true
+debug=false
 white-list=false
 spawn-animals=true
-hardcore=false
 snooper-enabled=true
+hardcore=false
 online-mode=false
 resource-pack=
 pvp=true
 difficulty=1
 enable-command-block=false
-gamemode=0
 player-idle-timeout=0
+gamemode=0
 max-players=10
 spawn-monsters=true
-generate-structures=true
 view-distance=10
+generate-structures=true
 motd=VVVVVV
