--- a/server.properties
+++ b/server.properties
@@ -1,37 +1,39 @@
 #Minecraft server properties
-#Tue Feb 09 19:45:47 MSK 2021
+#Tue Feb 09 20:21:46 MSK 2021
+spawn-protection=16
+server-name=Unknown Server
 generator-settings=
+force-gamemode=false
+allow-nether=true
+gamemode=0
+enable-query=false
+player-idle-timeout=0
+difficulty=1
+spawn-monsters=true
 op-permission-level=4
 resource-pack-hash=
-allow-nether=true
-level-name=world
-enable-query=false
-allow-flight=false
 announce-player-achievements=true
-server-port=25565
-max-world-size=29999984
-level-type=DEFAULT
-enable-rcon=false
-force-gamemode=false
-level-seed=
-server-ip=localhost
-network-compression-threshold=256
-max-build-height=256
-spawn-npcs=true
-debug=false
-white-list=false
-spawn-animals=true
-snooper-enabled=true
-hardcore=false
-online-mode=false
-resource-pack=
 pvp=true
-difficulty=1
+snooper-enabled=true
+level-type=DEFAULT
+hardcore=false
 enable-command-block=false
-player-idle-timeout=0
-gamemode=0
-max-players=10
-spawn-monsters=true
+max-players=990
+network-compression-threshold=256
+max-world-size=29999984
+server-port=25565
+debug=false
+server-ip=localhost
+spawn-npcs=true
+allow-flight=false
+level-name=world
 view-distance=10
+resource-pack=
+spawn-animals=true
+white-list=false
 generate-structures=true
-motd=VVVVVV
+online-mode=false
+max-build-height=256
+level-seed=
+motd=VVVVVV | Minecraft Anarchy | Classic Anarchy
+enable-rcon=false
