Какой-то коммит

--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Tue Feb 09 20:21:46 MSK 2021
+#Tue Feb 09 21:22:47 MSK 2021
 spawn-protection=16
 server-name=Unknown Server
 generator-settings=
@@ -23,11 +23,12 @@ network-compression-threshold=256
 max-world-size=29999984
 server-port=25565
 debug=false
-server-ip=localhost
+server-ip=25.64.217.17
 spawn-npcs=true
 allow-flight=false
 level-name=world
 view-distance=10
+server-id=unnamed
 resource-pack=
 spawn-animals=true
 white-list=false
@@ -35,5 +36,5 @@ generate-structures=true
 online-mode=false
 max-build-height=256
 level-seed=
-motd=VVVVVV | Minecraft Anarchy | Classic Anarchy
 enable-rcon=false
+motd=VVVVVV | Minecraft Anarchy | Classic Anarchy
