--- a/plugins/AuthMe/commands.yml
+++ b/plugins/AuthMe/commands.yml
@@ -9,7 +9,7 @@
 # For example, if you want to send a welcome message to a player who just registered:
 # onRegister:
 #   welcome:
-#     command: 'msg %p Welcome to the server!'
+#     command: 'msg %p приветствуем в аду!'
 #     executor: CONSOLE
 # 
 # This will make the console execute the msg command to the player.
@@ -18,10 +18,10 @@
 # and 'executor' defines who will run the command (either PLAYER or CONSOLE). Longer example:
 # onLogin:
 #   welcome:
-#     command: 'msg %p Welcome back!'
+#     command: 'msg %p Ад тебя ждал!'
 #     executor: PLAYER
 #   broadcast:
-#     command: 'broadcast %p has joined, welcome back!'
+#     command: 'broadcast %p Приветствуем в аду!'
 #     executor: CONSOLE
 # 
 # Supported command events: onLogin, onSessionLogin, onJoin, onLogout, onRegister, onUnregister
