Починены кровати, пофикшены багы и изменены конфиги RSP

--- a/plugins/Tablist/config.yml
+++ b/plugins/Tablist/config.yml
@@ -17,20 +17,17 @@ Tablist:
     Time: 20
     Messages:
       Header:
-      - |-
-        &5&lVVVVVV
-        &7&lИгрок: &3&l%player%
-        &7&lЗдоровье: &a&l%health% &7&l/ &2&l%maxhealth%
-        &7&lСытость: &a&l%foodlevel% &7&l/ &2&l10.0
-
-            &7&m===================
-      - |-
-        &6&lVVVVVV
-        &8&lЗдоровье: &b&l%player%
-        &8&lЗдоровье: &c&l%health% &8&l/ &4&l%maxhealth%
-        &8&lСытость: &c&l%foodlevel% &8&l/ &4&l10.0
-
-            &7&m===================
+      - "&5&lVVVVVV\n&7&l\u0420\ufffd\u0420\u0456\u0421\u0402\u0420\u0455\u0420\u0454\
+        : &3&l%player%\n&7&l\u0420\u2014\u0420\u0491\u0420\u0455\u0421\u0402\u0420\
+        \u0455\u0420\u0406\u0421\u040a\u0420\xb5: &a&l%health% &7&l/ &2&l%maxhealth%\n\
+        &7&l\u0420\u040e\u0421\u2039\u0421\u201a\u0420\u0455\u0421\u0403\u0421\u201a\
+        \u0421\u040a: &a&l%foodlevel% &7&l/ &2&l10.0\n\n    &7&m==================="
+      - "&6&lVVVVVV\n&8&l\u0420\u2014\u0420\u0491\u0420\u0455\u0421\u0402\u0420\u0455\
+        \u0420\u0406\u0421\u040a\u0420\xb5: &b&l%player%\n&8&l\u0420\u2014\u0420\u0491\
+        \u0420\u0455\u0421\u0402\u0420\u0455\u0420\u0406\u0421\u040a\u0420\xb5: &c&l%health%\
+        \ &8&l/ &4&l%maxhealth%\n&8&l\u0420\u040e\u0421\u2039\u0421\u201a\u0420\u0455\
+        \u0421\u0403\u0421\u201a\u0421\u040a: &c&l%foodlevel% &8&l/ &4&l10.0\n\n \
+        \   &7&m==================="
       Footer:
       - |-
         &7&m===================
