--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Tue Feb 09 21:22:47 MSK 2021
+#Wed Feb 10 13:51:01 MSK 2021
 spawn-protection=16
 server-name=Unknown Server
 generator-settings=
@@ -16,14 +16,14 @@ announce-player-achievements=true
 pvp=true
 snooper-enabled=true
 level-type=DEFAULT
-hardcore=false
+hardcore=true
 enable-command-block=false
-max-players=990
+max-players=1190
 network-compression-threshold=256
 max-world-size=29999984
 server-port=25565
 debug=false
-server-ip=25.64.217.17
+server-ip=localhost
 spawn-npcs=true
 allow-flight=false
 level-name=world
